--- a/Chart_in_Core/Chart_in_Core/Views/Home/Privacy.cshtml
+++ b/Chart_in_Core/Chart_in_Core/Views/Home/Privacy.cshtml
@@ -1,57 +1,34 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    Layout = null;
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
-<input type="button" onclick="$('#Modal1').modal('show')" value="show modal" />
-@section Modals
-{
-   <div class="modal fade" id="Modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-body" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle"> جزئیات </h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="$('#DetailsModal').modal('hide')">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="box-body" id="div_Chart">
-                     @*   <div class="chart-container">
-                            <canvas id="chart" style="width:400px; height:200px"></canvas>
-                        </div>*@
-                    </div>
-                    <div>
-                           @* <table class="table table-striped table-bordered zero-configuration dataTable" role="grid">
-                                <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Brand</th>
-                                        <th>Price</th>
-                                        <th>ViewCount</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model. != null)
-                                        @foreach (var item in Model.productDetailsDtos)
-                                        {
-                                            <tr>
-                                                <td>@item.Name</td>
-                                                <td>@item.Brand</td>
-                                                <td>@item.Price</td>
-                                                <td>@item.ViewCount</td>
-                                            </tr>
-                                        }
-                                </tbody>
-                            </table>*@
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <title>CSS Tabs</title>
+  <meta charset=utf-8>
+   <link rel="stylesheet" href="~/SiteTemplate/assets/css/Flowchart.css">
+</head>
 
-            </div>
-        </div>
+<body  style="font-family:B Roya;">
+  <div class="tabbed">
+    <input type="radio" name="tabs" id="tab-nav-1" checked>
+    <label for="tab-nav-1">نمودار وضعیت</label>
+    <input type="radio" name="tabs" id="tab-nav-2">
+    <label for="tab-nav-2">فلوچارت</label>
+    <div class="tabs">
+      <div>
+        <h2>نمودار وضعیت</h2>
+        
+        
     </div>
-}
+      <div>
+        <h2>فلوچارت</h2>
+     
+    </div>
+     
+    </div>
+  </div>
+</body>
+
+</html>
