--- a/Chart_in_Core/Chart_in_Core/wwwroot/SiteTemplate/assets/css/Flowchart.css
+++ b/Chart_in_Core/Chart_in_Core/wwwroot/SiteTemplate/assets/css/Flowchart.css
@@ -143,7 +143,134 @@
 
 
 
-/*.tooltip .tooltiptext table,
-.tooltip .tooltiptext ul {
-    font-size: 18px;*/ /* not 8px */
-/*}*/
+
+
+ /*Style the tab*/ 
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+ /*Style the buttons inside the tab*/ 
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+ /*Change background color of buttons on hover*/ 
+.tab button:hover {
+    background-color: #ddd;
+}
+
+ /*Create an active/current tablink class*/ 
+.tab button.active {
+    background-color: #ccc;
+}
+
+ /*Style the tab content*/ 
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+
+
+
+
+/** {
+box-sizing: border-box;
+}
+*/
+/* body {
+background: url(https://subtlepatterns.com/patterns/use_your_illusion.png);
+color: #eee;
+font: 1em 'PT Sans', sans-serif;
+} */
+
+::selection {
+background-color: #b9c5c7;
+}
+
+.tabbed {
+width: 700px;
+margin: 50px auto;
+}
+
+.tabbed > input {
+    display: none;
+}
+
+.tabbed > label {
+    display: block;
+    float: left;
+    padding: 12px 20px;
+    margin-right: 5px;
+    cursor: pointer;
+    transition: background-color .3s;
+}
+
+    .tabbed > label:hover,
+    .tabbed > input:checked + label {
+        background: #b9c5c7;
+    }
+
+.tabs {
+clear: both;
+perspective: 600px;
+}
+
+.tabs > div {
+    width: 700px;
+    position: absolute;
+    border: 2px solid #416d75;
+    padding: 10px 30px 40px;
+    line-height: 1.4em;
+    opacity: 0;
+    transform: rotateX(-20deg);
+    transform-origin: top center;
+    transition: opacity .3s, transform 1s;
+    z-index: 0;
+}
+
+#tab-nav-1:checked ~ .tabs > div:nth-of-type(1),
+#tab-nav-2:checked ~ .tabs > div:nth-of-type(2),
+#tab-nav-3:checked ~ .tabs > div:nth-of-type(3),
+#tab-nav-4:checked ~ .tabs > div:nth-of-type(4) {
+transform: rotateX(0);
+opacity: 1;
+z-index: 1;
+}
+
+@media screen and (max-width: 700px) {
+.tabbed {
+    width: 400px
+}
+
+.tabbed > label {
+    display: none
+}
+
+.tabs > div {
+    width: 400px;
+    border: none;
+    padding: 0;
+    opacity: 1;
+    position: relative;
+    transform: none;
+    margin-bottom: 60px;
+}
+
+.tabs > div h2 {
+    border-bottom: 2px solid #4EC6DE;
+    padding-bottom: .5em;
+}
+}
