changes in style

--- a/Chart_in_Core/Chart_in_Core/Views/Home/Flowchart.cshtml
+++ b/Chart_in_Core/Chart_in_Core/Views/Home/Flowchart.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="flowchart_body" >
+﻿<div class="flowchart_body" style="overflow-x:scroll ;white-space: nowrap;"  >
 
     <!--Flowchart---->
     <div id="wrapper">
@@ -6,17 +6,6 @@
        <span style="background-color: green;" class="flowcahrt_label">
          <span class="flowcharttooltip" >
             <span class="tooltiptext"  id="spn_ezhar">
-                 
-             @*   <table dir="rtl">
-                    <tr>
-                        <td style="width:70px;"> تاریخ ارسال :</td>
-                        <td>1400/03/18</td>
-                    </tr>
-                    <tr>
-                        <td style="width:70px;"> کد رهگیری :</td>
-                        <td>140654198618</td>
-                    </tr>
-                </table>*@
             </span>
             ارائه اظهارنامه
 
