--- a/Chart_in_Core/Chart_in_Core/Views/Home/Lookup.cshtml
+++ b/Chart_in_Core/Chart_in_Core/Views/Home/Lookup.cshtml
@@ -77,7 +77,7 @@
 
 
                                 </div>
-                                @if (Model.MoadiShenases != null)
+                                @if (Model.MoadiShenases != null && Model.MoadiShenases.Count!=0)
                                 {
                                     <table class="table table-striped table-bordered zero-configuration dataTable" role="grid">
                                         <thead>
@@ -98,21 +98,23 @@
                                                      <td>@item.MosharekatMember</td>
                                                      <td>@item.ShenaseEzharname</td>
                                                     <td>
-                                                        @*<input type="hidden" asp-for="@item.TIN" />*@
                                                         <a href="javascript:void()"   onclick="GetDetails('@item.ShenaseEzharname')" >جزئیات</a>
-                                                        @*<input type="submit"  value="جزئیات" onclick=" GetDetails('@item.ShenaseEzharname')">*@
                                                     </td>
                                                 </tr>
                                             }
                                         </tbody>
                                     </table>
-
-
+                                }
+                                @if(Model.MoadiShenases != null)
+                                {
+                                    @if(Model.MoadiShenases.Count==0)
+                                    {
+                                        <div class="tab">
+                                            <p style="font-style:italic">اطلاعاتی برای نمایش وجود ندارد ...</p>
+                                        </div>
+                                    }
                                 }
 
-                               @*  <div  id="tbl_chart">
-                                  </div>*@
-                                
                             </div>
                         </div>
                     </div>
@@ -122,9 +124,7 @@
 
         </div>
     </form>
-     @*<div class="box-body" id="div_Chart"  >*@
-                 
-       @*</div>*@
+
  </section>
                   
 
@@ -219,8 +219,6 @@ function ShowDetailsModal(XLabels,YValues) {
         }, 2000)
 
     }
-
-
 
 
 function GetDetails(sh_ezharname) {
@@ -353,7 +351,7 @@ function GetDetails(sh_ezharname) {
     }
 
 
- function GetSellerProduct() {
+function GetSellerProduct() {
             var codmelli = $('#NationalCode').val();
             var postData = {
                 'CodMelli': codmelli,
@@ -371,18 +369,18 @@ function GetDetails(sh_ezharname) {
             });
     }
 
- function openContent(evt, tabName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-  document.getElementById(tabName).style.display = "block";
-  evt.currentTarget.className += " active";
+function openContent(evt, tabName) {
+      var i, tabcontent, tablinks;
+      tabcontent = document.getElementsByClassName("tabcontent");
+      for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+      }
+      tablinks = document.getElementsByClassName("tablinks");
+      for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+      }
+      document.getElementById(tabName).style.display = "block";
+      evt.currentTarget.className += " active";
 }
 </script>
 <script src="~/js/Chart.bundle.min.js"></script>
@@ -390,27 +388,8 @@ function GetDetails(sh_ezharname) {
 
 @section Modals
 {
- <div id="DetailsModal0" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-           <h5 class="modal-title" > جزئیات </h5>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-      <div class="modal-body" id="tbl_Flowchart">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">بستن</button>
-      </div>
-    </div>
-
-  </div>
-</div>
-
      <!-- Modal  -->
-    <div class="modal" id="DetailsModal" >
+    <div class="modal" id="DetailsModal" style="overflow:auto" >
      
             <div class="modal-content">
                 <div class="modal-header">
@@ -419,24 +398,20 @@ function GetDetails(sh_ezharname) {
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div >
-
-                    <div class="tab" style="background-color: #ceebe1;  overflow: hidden; border: 1px solid #ccc;" dir="rtl">
+                <div  style="text-align:right" >
+                    <div class="tab" >
                         <button class="tablinks" onclick="openContent(event, 'Flowchart')">فلوچارت</button>
                         <button class="tablinks" onclick="openContent(event, 'Chart')">نمودار وضعیت </button>
                     </div>
 
-                    <div id="Flowchart" class="tabcontent">
-                                @await Html.PartialAsync("Flowchart")
-
+                    <div id="Flowchart" class="tabcontent"  >
+                           @await Html.PartialAsync("Flowchart")
                     </div>
 
-                     <div id="Chart" class="tabcontent">
-                      <h3>نمودار وضعیت </h3>
+                     <div id="Chart" class="tabcontent" >
                          <div class="chart-container">
-                                    <canvas id="chart" style="width:400px; height:200px"></canvas>
-                                </div>
-
+                               <canvas id="chart" style="width:400px; height:200px"></canvas>
+                         </div>
                     </div>
 
                 </div>
