--- a/Chart_in_Core/Chart_in_Core/Views/Shared/_Layout.cshtml
+++ b/Chart_in_Core/Chart_in_Core/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3" style="text-align:right">
             @RenderBody()
         </main>
     </div>
