new changes in flowchart

--- a/Chart_in_Core/Chart_in_Core/Views/Home/Flowchart.cshtml
+++ b/Chart_in_Core/Chart_in_Core/Views/Home/Flowchart.cshtml
@@ -1,35 +1,34 @@
-﻿<div class="flowchart_body" style="overflow-x:scroll ;white-space: nowrap;"  >
+﻿<div class="flowchart_body" style="overflow-x:scroll ;white-space: nowrap;">
 
     <!--Flowchart---->
     <div id="wrapper">
 
-       <span style="background-color: green;" class="flowcahrt_label">
-         <span class="flowcharttooltip" >
-            <span class="tooltiptext"  id="spn_ezhar">
+        <span style="background-color: green;" class="flowcahrt_label">
+            <span class="flowcharttooltip">
+                <span class="tooltiptext" id="spn_ezhar">
+                </span>
+                ارائه اظهارنامه
+
             </span>
-            ارائه اظهارنامه
-
         </span>
-        </span>
-            
-
         <div class="branch ">
             <div class="entry sole">
                 <span style="background-color: green;" id="spn_asnad" class="flowcahrt_label">درخواست اسناد و مدارک</span>
                 <div class="branch ">
                     <div class="entry sole">
-                       <span   class="flowcahrt_label">
+                        <span class="flowcahrt_label">
 
                             <span class="flowcharttooltip">
                                 <span class="tooltiptext" id="spn_tashkhis">
-                            
 
-                        </span>صدور برگ تشخیص</span>
 
-                       </span>
+                                </span>صدور برگ تشخیص
+                            </span>
+
+                        </span>
                         <div class="branch lv1">
                             <div class="entry">
-                                <span  id="spn_eteraz" class="flowcahrt_label">اعتراض</span>
+                                <span id="spn_eteraz" class="flowcahrt_label">اعتراض</span>
                                 <div class="branch lv2">
                                     <div class="entry">
                                         <span class="flowcahrt_label">Entry-1-1</span>
@@ -70,7 +69,7 @@
                             <div class="entry">
                                 <span style="background-color: gray;" id="spn_tamkin" class="flowcahrt_label">تمکین</span>
                                 <div class="branch lv3">
-                                    <div class="entry sole"><span id="spn_ghatee"  class="flowcahrt_label">صدور برگ قطعی</span></div>
+                                    <div class="entry sole"><span id="spn_ghatee" class="flowcahrt_label">صدور برگ قطعی</span></div>
                                 </div>
                             </div>
                         </div>
