--- a/Chart_in_Core/Chart_in_Core/wwwroot/SiteTemplate/assets/css/Flowchart.css
+++ b/Chart_in_Core/Chart_in_Core/wwwroot/SiteTemplate/assets/css/Flowchart.css
@@ -112,10 +112,11 @@
 
 .flowcharttooltip .tooltiptext {
     visibility: hidden;
-    width: 400px;
+    width: 350px;
     background-color: rgb(250, 247, 247);
     color: rgb(34, 26, 26);
-    text-align: center;
+    text-align: right;
+    font-size:smaller;
     border-radius: 6px;
     padding: 5px 0;
     /* Position the tooltip */
@@ -171,12 +172,12 @@
 
  /*Create an active/current tablink class*/ 
 .tab button.active {
-    background-color: #ccc;
+    background-color: white;
 }
 
  /*Style the tab content*/
 .tabcontent {
-    display: block;
+    display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
